Fix: modal의z-index가 selectArea의 z-index보다 작아서 modal이 가려지는 현상 해결

--- a/src/pages/Request/zoneSelectPage/selectArea/styles.module.scss
+++ b/src/pages/Request/zoneSelectPage/selectArea/styles.module.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 7px;
-    z-index: 9999;
+    z-index: 10;
 }
 .selectedArea{
     display: flex;
